# sun-sensor-hardware

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
cmake/: toolchain-arm-none-eabi.cmake
doc/3D_models/: Calculation.xlsx  Comparison of photoresist measurements - 20241130.xlsx  README.md
doc/3D_models/assemblies/: Assembly - 3 faces and platforms.stl  Assembly - 3 faces.stl
doc/3D_models/frame_cup/v1/: SunSensor - frame cup v1.3mf  SunSensor - frame cup v1.stl  SunSensor - frame cup v1_0.4n_0.1mm_PLA_MINI_2h40m.bgcode
doc/3D_models/frame_cup/v2/: SunSensor - frame cup v2.3mf  SunSensor - frame cup v2.stl  SunSensor - frame cup v2_0.4n_0.1mm_PLA_MINIIS_53m.bgcode  SunSensor - frame cup v2_0.4n_0.1mm_PLA_MINI_1h54m.bgcode  SunSensor - frame cup v2_0.4n_0.2mm_PLA_MINIIS_28m.bgcode
doc/3D_models/frame_cup/v3/: SunSensor - frame cup v3.3mf  SunSensor - frame cup v3_0.4n_0.15mm_PLA_MINIIS_46m.bgcode
doc/3D_models/frame_stick/v1/: SunSensor - frame stick V1 - All parts.3mf  SunSensor - frame stick V1 - All parts_0.4n_0.2mm_PLA_MINIIS_2h36m.bgcode  SunSensor - frame stick V1 - Stick.3mf
doc/3D_models/frame_stick/v2/: SunSensor - frame stick V2 - All parts.3mf  SunSensor - frame stick V2 - All parts_0.4n_0.1mm_PLA_MINIIS_6h18m.bgcode  SunSensor - frame stick V2 - Stick Lid.3mf  SunSensor - frame stick V2 - Stick.3mf  SunSensor - frame stick V2 - Stick_0.4n_0.2mm_PLA_MINIIS_40m.bgcode
doc/3D_models/frame_stick/v3/: SunSensor - frame stick V3 - All parts.3mf  SunSensor - frame stick V3 - Stick Lid.3mf  SunSensor - frame stick V3 - Stick.3mf
doc/3D_models/frame_stick/v4/: SunSensor - frame stick lid v4.stl  SunSensor - frame stick lid v4_detail_gpt.3mf  SunSensor - frame stick lid v4_detail_gpt_0.4n_0.1mm_PLA_MINIIS_39m.bgcode  SunSensor - frame stick lid v4_detail_standard.3mf  SunSensor - frame stick lid v4_detail_standard_0.4n_0.1mm_PLA_MINI_55m.bgcode  SunSensor - frame stick lid v4_horizontal.3mf  SunSensor - frame stick lid v4_horizontal_0.4n_0.2mm_PLA_MINIIS_17m_205stopni.bgcode  SunSensor - frame stick lid v4_horizontal_supports.3mf  SunSensor - frame stick lid v4_horizontal_supports_0.4n_0.2mm_PLA_MINIIS_19m_215stopni.bgcode  SunSensor - frame stick v4.3mf  SunSensor - frame stick v4.stl  SunSensor - frame stick v4x4_0.4n_0.2mm_PLA_MINIIS_1h22m.bgcode
doc/3D_models/holder/v1/: SunSensor - holder v1.3mf  SunSensor - holder v1.stl  SunSensor - holder v1_0.4n_0.15mm_PLA_MINIIS_2h20m.bgcode
doc/3D_models/internal_platform/v1/: SunSensor - internal platform V1 - Platform.3mf  SunSensor - internal platform V1 - Platform_0.4n_0.1mm_PLA_MINIIS_33m.bgcode
doc/3D_models/internal_platform/v2/: SunSensor - internal platform V2 - All parts.3mf  SunSensor - internal platform V2 - All parts_0.4n_0.1mm_PLA_MINIIS_18m.bgcode  SunSensor - internal platform V2 - Platform.3mf  SunSensor - internal platform V2 - Stabilizator.3mf
doc/3D_models/internal_platform/v3/: SunSensor - internal platform V3 - Platform - slicer.3mf  SunSensor - internal platform V3 - Platform - slicer_0.4n_0.1mm_PLA_MINIIS_24m.bgcode  SunSensor - internal platform V3 - Platform.3mf  SunSensor - internal platform V3 - Stabilizator.3mf
doc/3D_models/internal_platform/v4/: SunSensor - internal platform V4 - Platform - slice1.3mf  SunSensor - internal platform V4 - Platform - slice1_0.4n_0.1mm_PLA_MINIIS_19m.bgcode  SunSensor - internal platform V4 - Platform.stl  SunSensor - internal platform V4 - Stabilizator.stl
doc/3D_models/pcb/: SunSensor - PCB 46x61 tester.3mf  SunSensor - PCB 46x61 tester.stl  SunSensor - PCB 46x61 tester_0.4n_0.1mm_PLA_MINIIS_18m.bgcode  SunSensor - PCB 46x61 tester_0.4n_0.1mm_PLA_MINI_36m.bgcode  SunSensor - PCB 46x61 tester_0.4n_0.2mm_PLA_MINIIS_11m.bgcode  SunSensor - PCB 46x61 tester_0.4n_0.2mm_PLA_MINI_19m.bgcode  SunSensor - PCB 50x70 tester.3mf  SunSensor - PCB 50x70 tester.stl  SunSensor - PCB 50x70 tester_0.4n_0.2mm_PLA_MINIIS_11m.bgcode  SunSensor - PCB 50x70 v2 tester.3mf  SunSensor - PCB 50x70 v2 tester.stl  SunSensor - PCB 50x70 v2 tester_0.4n_0.2mm_PLA_MINI_25m.bgcode
doc/3D_models/slit_sensor_face/v1/: SunSensor - slit sensor face V1 - Face.3mf  SunSensor - slit sensor face V1 - Sensor array.3mf  SunSensor - slit sensor face V1 - Sensor array_0.4n_0.2mm_PLA_MINIIS_4m.bgcode
doc/3D_models/slit_sensor_face/v10/: SunSensor - slit sensor face v10 - Face.3mf  SunSensor - slit sensor face v10 - Face.stl  SunSensor - slit sensor face v10 - Face_0.4n_0.1mm_PLA_MINI_1h31m.bgcode  SunSensor - slit sensor face v10 - Face_0.4n_0.2mm_PLA_MINIIS_29m.bgcode  (+3 more)
doc/3D_models/v1/: SunSensor - slit sensor face V1 - Face_0.4n_0.2mm_PLA_MINIIS_56m.bgcode
doc/3D_models/v2/: SunSensor - slit sensor face V2 - Face_0.4n_0.2mm_PLA_MINIIS_33m.bgcode
doc/3D_models/v3/: SunSensor - slit sensor face V3 - Sensor array.3mf
doc/3D_models/v6/: SunSensor - slit sensor face V6 - Sensor array.3mf  SunSensor - slit sensor face V6 - all parts_0.4n_0.1mm_PLA_MINIIS_1h30m.bgcode
doc/3D_models/washer/: Washer M1.8 6x0.4mm (30 psc.).3mf  Washer M1.8 6x0.4mm (30 psc.)_0.4n_0.1mm_PLA_MINIIS_4m.bgcode  Washer M1.8 6x0.4mm.3mf  Washer M1.8 6x0.4mm.stl  Washer M1.8 6x0.4mm_0.4n_0.2mm_PLA_MINIIS_27s.bgcode
doc/proto/: README.md
doc/proto/v1/: sun_sensor_data.proto
src/: CMakeLists.txt
src/application/: main.h
src/application/inc/: datatypes.h  main.h
src/application/inc/DSP/: lightEstimator.h
src/application/inc/HAL/: stm32f4xx_hal_conf.h
src/application/inc/math_functions/: avg.h
src/application/inc/peripherials/: i2c.h  peripherals_common.h  usart.h
src/application/inc/peripherials/usb/: usb.h  usbd_conf_template.h  usbd_core.h  usbd_def.h  usbd_desc_template.h
src/application/src/: main.cc
src/application/src/peripherials/: i2c.cc  nvic.cc  usart.cc
src/application/src/peripherials/usb/: usb.cc  usbd_cdc.c  usbd_cdc_if_template.c  usbd_conf_template.c  usbd_desc_template.c
src/application/test/: lightEstimatorTest.cc  mathTest.cc
src/drivers/: STM32F401CC_FLASH.ld  STM32F411CE_FLASH.ld  startup.s
(+45 files in other folders)
